fix: make tip fully hidden when there is no side and alignment that can be found for it

--- a/styles/main.css
+++ b/styles/main.css
@@ -49,6 +49,10 @@ div#boarding-popover-item .boarding-popover-tip {
   position: absolute;
   border-color: #fff;
 }
+div#boarding-popover-item
+  .boarding-popover-tip:not([class^="boarding-tipside-"]):not([class^="boarding-tipalign-"]):not([class*=" boarding-tipalign-"]):not([class*=" boarding-tipalign-"]) {
+  display: none;
+}
 
 /* tb */
 div#boarding-popover-item .boarding-popover-tip.boarding-tipside-top {
